--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -6,7 +6,6 @@
 }
 
 /* header */
-
 .dark-menu {
   background-color: $darkBackground !important;
   color: $textColorDark;
@@ -23,8 +22,14 @@
 .header {
   background-color: $lightBackground1;
   max-width: 100%;
-  padding: 15px 20px;
+  padding: 15px 15px 20px;
   margin: 0px auto;
+
+  @media screen and (min-width: 1300px) {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
 }
 
 .header ul {
@@ -38,9 +43,15 @@
   color: $subTitle;
 }
 
+.header li {
+  @media screen and (min-width: 1300px) {
+    float: left;
+  }
+}
+
 .header li a {
   display: block;
-  padding: 15px 20px;
+  padding: 14px;
   color: $textColor;
   text-decoration: none;
 }
@@ -56,35 +67,57 @@
   float: left;
   font-size: 1.5em;
   text-decoration: none;
-  margin-top: 10px;
   line-height: normal;
+  padding: 8px 0;
+
+  @media screen and (max-width: 768px) {
+    font-size: 20px;
+  }
+
+  @media screen and (min-width: 1300px) {
+    padding: 0;
+  }
 }
 
 .header .logo-name {
-  font-family: "Agustina Regular";
+  font-family: "cursive"; //Agustina Regular
   font-weight: bold;
   font-variant-ligatures: no-common-ligatures;
   -webkit-font-variant-ligatures: no-common-ligatures;
   padding: 0 10px;
+
+  @media screen and (max-width: 768px) {
+    font-size: 20px;
+  }
 }
 
 /* menu */
-
 .header .menu {
   clear: both;
   max-height: 0;
   transition: max-height 0.2s ease-out;
+
+  @media screen and (min-width: 1300px) {
+    max-height: none;
+  }
+
+  @media screen and (max-width: 768px) {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  } 
 }
 
 /* menu icon */
-
 .header .menu-icon {
   cursor: pointer;
   display: inline-block;
   float: right;
-  padding: 28px 20px;
+  padding: 20px 0;
   position: relative;
   user-select: none;
+
+  @media screen and (min-width: 1300px) {
+    display: none;
+  }
 }
 
 .header .menu-icon .navicon {
@@ -131,7 +164,6 @@
 }
 
 /* menu btn */
-
 .header .menu-btn {
   display: none;
 }
@@ -160,20 +192,20 @@
 /* 48em = 768px */
 
 @media (min-width: 48em) {
-  .header li {
-    float: left;
-  }
-  .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  .header .menu {
-    max-height: none;
-  }
-  .header .menu-icon {
-    display: none;
-  }
+  // .header li {
+  //   float: left;
+  // }
+  // .header {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: space-between;
+  // }
+  // .header .menu {
+  //   max-height: none;
+  // }
+  // .header .menu-icon {
+  //   display: none;
+  // }
 }
 @media (max-width: 960px) and (min-width: 768px) {
   .header {
