--- a/src/components/achievementCard/AchievementCard.scss
+++ b/src/components/achievementCard/AchievementCard.scss
@@ -1,9 +1,13 @@
 @import "../../_globalColor";
 
 .card-image {
-  max-width: 100%;
+  max-width: 250px;
   height: auto;
-  width: 250px;
+  width: 100%;
+
+  @media screen and (max-width: 768px) {
+    max-width: 150px;
+  }
 }
 .card-title {
   color: $titleColor;
