--- a/src/components/educationCard/EducationCard.scss
+++ b/src/components/educationCard/EducationCard.scss
@@ -15,10 +15,10 @@
 }
 
 .education-card-border {
-  height: 30px;
+  height: 2px;
   width: 80%;
   border-top: 2px solid $lightBorder1;
-  margin-bottom: 20px;
+  margin-bottom: 0;
   -webkit-transition: width 0.6s ease-in-out;
   -moz-transition: width 0.6s ease-in-out;
   -o-transition: width 0.6s ease-in-out;
@@ -47,6 +47,7 @@
   height: 6rem;
   box-shadow: 0 0.5rem 1rem $lightBoxShadowDarker;
   border-radius: 50%;
+  object-position: 10px;
 }
 
 .education-card-right {
