--- a/src/containers/StartupProjects/StartupProjects.scss
+++ b/src/containers/StartupProjects/StartupProjects.scss
@@ -1,9 +1,13 @@
 @import "../../_globalColor";
 
 .card-image {
-  max-width: 100%;
+  max-width: 250px;
   height: auto;
-  width: 250px;
+  width: 100%;
+
+  @media screen and (max-width: 768px) {
+    max-width: 150px;
+  }
 }
 .card-title {
   color: $titleColor;
@@ -51,7 +55,7 @@
 }
 .project-image {
   position: relative;
-  height: 250px;
+  height: auto;
   overflow: hidden;
   display: flex;
   justify-content: center;
