--- a/src/containers/greeting/Greeting.scss
+++ b/src/containers/greeting/Greeting.scss
@@ -40,7 +40,7 @@
   max-width: 400px;
 
   @media screen and (max-width: 768px) {
-    margin: 0 auto;;
+    margin: 0 auto;
   }
 }
 .download-link-button {
